--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,11 @@
 
 .App {
   display: grid;
-  grid-template-rows: 1fr 10fr 1fr;
-  
+  grid-template-rows: 1fr 7fr 4fr;  
   text-align: center;
   background:linear-gradient(to bottom, #ffff00 0%, #ff9900 100%);
   width: 100%;
   height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
   
 }
