--- a/src/container/pokemon.css
+++ b/src/container/pokemon.css
@@ -1,6 +1,9 @@
 
 
-
+.pokimainDiv{
+  display: grid;
+  grid-template-rows: 2fr 10fr;  
+}
 .card{
     display: grid;
     grid-template-rows: auto;
@@ -78,8 +81,9 @@
 .search{
   display: grid;
   grid-template-columns: 11fr 1fr;
-  width: 20%;
+  width: 30%;
   margin: auto;
+  column-gap: 20px;
 }
 
 .search input:focus{
