--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,18 @@
   background:linear-gradient(to bottom, #ffff00 0%, #ff9900 100%);
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  overflow: hidden;  
+}
+
+@media only screen and (max-width: 768px) {
   
+  .App {
+    display: grid;
+    grid-template-rows: 1fr 1fr 10fr;  
+    text-align: center;
+    background:linear-gradient(to bottom, #ffff00 0%, #ff9900 100%);
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;  
+  }
 }
