--- a/src/container/imagescroll/ImageRotator.css
+++ b/src/container/imagescroll/ImageRotator.css
@@ -12,6 +12,18 @@
   
   .image-rotator img.active {
     opacity: 1;
-    /* transform: 0.5s scale(1.2); */
   }
   
+  @media only screen and (max-width: 768px) {
+    .image-rotator img {
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out;
+      width: 20%;
+    }
+    .image-rotator {
+      margin: auto;
+      margin-top: 10px;
+      width: 100%;
+    }
+    
+  }
