--- a/src/container/pokemon.css
+++ b/src/container/pokemon.css
@@ -90,3 +90,33 @@
   outline-color: #000000 !important;
   border-color: #000000 !important;
 }
+
+@media only screen and (max-width: 768px) {
+  .pokimainDiv{
+    display: grid;
+    grid-template-rows: 2fr 10fr;  
+    margin-left:20px;
+  }
+
+  .card{
+    display: grid;
+    grid-template-rows: auto;
+    align-items: center;
+    border: none solid black;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    /* margin: auto; */
+    margin-top: 20px;
+    width: 100%;
+    background-color: rgba(248, 248, 248, 0.801);
+    border-radius: 7px;
+    font-weight: bold;
+  }
+  .search{
+    display: grid;
+    grid-template-columns: 11fr 1fr;
+    width: 100%;
+    margin: auto;
+    column-gap: 20px;
+  }
+  
+}
